# teamtype

./: CHANGELOG.md  Cargo.toml
.github/workflows/: vscode-plugin.yml
crates/teamtype/: Cargo.toml
crates/teamtype/assets/: adjectives.txt  nouns.txt
crates/teamtype/src/: wormhole.rs
daemon/src/: ot.rs
hedgedoc-bridge/: Cargo.toml
hedgedoc-bridge/src/: main.rs
nvim-plugin/lua/: teamtype.lua
vscode-plugin/src/: cursor.ts  extension.ts
vscode-plugin/src/types/: teamtype.d.ts
